--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.3"
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-compiler:2.42"
     implementation "androidx.compose.ui:ui:$compose_version"
