--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-compiler:2.42"
     implementation "androidx.compose.ui:ui:$compose_version"
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.material:material:$compose_version"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
